--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+			crossorigin="anonymous"
+		/>
+		<title>Repo 1</title>
 	</head>
 	<body>
-		<h1>Hello World</h1>
+		<div class="container">
+			<div class="display-1 font-weight-bold p-4">SECONDARIES</div>
+			<div class="d-flex justify-content-between align-items-center">
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, hic!
+					Exercitationem sequi qui asperiores neque optio dolorem saepe
+					incidunt. Explicabo debitis consequuntur, voluptatem saepe nobis vel
+					eveniet in repudiandae ipsum.
+				</p>
+				<img
+					src="https://images.pexels.com/photos/1438761/pexels-photo-1438761.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+					alt=""
+				/>
+			</div>
+		</div>
 	</body>
 </html>
