--- a/index.html
+++ b/index.html
@@ -26,6 +26,45 @@
 					alt=""
 				/>
 			</div>
+			<br />
+			<br />
+			<br />
+			<br />
+			<br />
+			<br />
+
+			<div class="d-flex justify-content-between align-items-center">
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, hic!
+					Exercitationem sequi qui asperiores neque optio dolorem saepe
+					incidunt. Explicabo debitis consequuntur, voluptatem saepe nobis vel
+					eveniet in repudiandae ipsum.
+				</p>
+				<img
+					src="https://images.pexels.com/photos/1438761/pexels-photo-1438761.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+					alt=""
+				/>
+			</div>
+
+			<br />
+			<br />
+			<br />
+			<br />
+			<br />
+			<br />
+
+			<div class="d-flex justify-content-between align-items-center">
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, hic!
+					Exercitationem sequi qui asperiores neque optio dolorem saepe
+					incidunt. Explicabo debitis consequuntur, voluptatem saepe nobis vel
+					eveniet in repudiandae ipsum.
+				</p>
+				<img
+					src="https://images.pexels.com/photos/1438761/pexels-photo-1438761.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+					alt=""
+				/>
+			</div>
 		</div>
 	</body>
 </html>
