--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 			integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
 			crossorigin="anonymous"
 		/>
+		<link rel="stylesheet" href="style.css" />
 		<title>Repo 1</title>
 	</head>
 	<body>
@@ -34,18 +35,17 @@
 			<br />
 
 			<div class="d-flex justify-content-between align-items-center">
-				<p>
+				<img
+					src="https://images.pexels.com/photos/15286/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+					alt=""
+				/>
+				<p class="text-right">
 					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, hic!
 					Exercitationem sequi qui asperiores neque optio dolorem saepe
 					incidunt. Explicabo debitis consequuntur, voluptatem saepe nobis vel
 					eveniet in repudiandae ipsum.
 				</p>
-				<img
-					src="https://images.pexels.com/photos/1438761/pexels-photo-1438761.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-					alt=""
-				/>
 			</div>
-
 			<br />
 			<br />
 			<br />
@@ -61,7 +61,7 @@
 					eveniet in repudiandae ipsum.
 				</p>
 				<img
-					src="https://images.pexels.com/photos/1438761/pexels-photo-1438761.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+					src="https://images.pexels.com/photos/3408744/pexels-photo-3408744.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
 					alt=""
 				/>
 			</div>
