--- a/index.html
+++ b/index.html
@@ -13,15 +13,74 @@
 		<title>Repo 1</title>
 	</head>
 	<body>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<div class="container">
+				<a class="navbar-brand" href="#">BRAND</a>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent"
+					aria-controls="navbarSupportedContent"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="#">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Products</a>
+						</li>
+					</ul>
+					<form class="d-flex">
+						<input
+							class="form-control me-2"
+							type="search"
+							placeholder="Search"
+							aria-label="Search"
+						/>
+						<button class="btn btn-outline-success" type="submit">
+							Search
+						</button>
+					</form>
+				</div>
+			</div>
+		</nav>
+
 		<div class="container">
-			<div class="display-1 font-weight-bold p-4">SECONDARIES</div>
-			<div class="d-flex justify-content-between align-items-center">
-				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, hic!
-					Exercitationem sequi qui asperiores neque optio dolorem saepe
-					incidunt. Explicabo debitis consequuntur, voluptatem saepe nobis vel
-					eveniet in repudiandae ipsum.
+			<div class="jumbotron px-5 py-3 mb-5">
+				<div class="display-1 font-weight-bold p-4">SECONDARIES</div>
+				<p class="lead">
+					This is a simple hero unit, a simple jumbotron-style component for
+					calling extra attention to featured content or information.
 				</p>
+				<hr class="my-4" />
+				<p>
+					It uses utility classes for typography and spacing to space content
+					out within the larger container.
+				</p>
+				<p class="lead">
+					<a class="btn btn-primary btn-lg" href="#" role="button"
+						>Learn more</a
+					>
+				</p>
+			</div>
+
+			<div class="d-flex justify-content-between align-items-center">
+				<div>
+					<h3 class="text-center pb-4">Lorem ipsum dolor sit amet.</h3>
+
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
+						eaque placeat accusantium excepturi nostrum, quisquam ut expedita
+						eius quae corrupti deleniti fugit aperiam eveniet, nemo veniam
+						accusamus sunt natus necessitatibus.
+					</p>
+				</div>
 				<img
 					src="https://images.pexels.com/photos/1438761/pexels-photo-1438761.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
 					alt=""
@@ -29,7 +88,7 @@
 			</div>
 			<br />
 			<br />
-			<br />
+			<hr />
 			<br />
 			<br />
 			<br />
@@ -39,27 +98,35 @@
 					src="https://images.pexels.com/photos/15286/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500"
 					alt=""
 				/>
-				<p class="text-right">
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, hic!
-					Exercitationem sequi qui asperiores neque optio dolorem saepe
-					incidunt. Explicabo debitis consequuntur, voluptatem saepe nobis vel
-					eveniet in repudiandae ipsum.
-				</p>
+				<div>
+					<h3 class="text-center pb-4">Lorem ipsum dolor sit amet.</h3>
+
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
+						eaque placeat accusantium excepturi nostrum, quisquam ut expedita
+						eius quae corrupti deleniti fugit aperiam eveniet, nemo veniam
+						accusamus sunt natus necessitatibus.
+					</p>
+				</div>
 			</div>
 			<br />
 			<br />
-			<br />
+			<hr />
 			<br />
 			<br />
 			<br />
 
 			<div class="d-flex justify-content-between align-items-center">
-				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, hic!
-					Exercitationem sequi qui asperiores neque optio dolorem saepe
-					incidunt. Explicabo debitis consequuntur, voluptatem saepe nobis vel
-					eveniet in repudiandae ipsum.
-				</p>
+				<div>
+					<h3 class="text-center pb-4">Lorem ipsum dolor sit amet.</h3>
+
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
+						eaque placeat accusantium excepturi nostrum, quisquam ut expedita
+						eius quae corrupti deleniti fugit aperiam eveniet, nemo veniam
+						accusamus sunt natus necessitatibus.
+					</p>
+				</div>
 				<img
 					src="https://images.pexels.com/photos/3408744/pexels-photo-3408744.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
 					alt=""
